--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "车展搭建商资质审核",
-  "name": "车展搭建商资质审核",
+  "short_name": "Test",
+  "name": "Test",
   "icons": [
     {
       "src": "favicon.ico",
